Remove deprecated -XX:+AggressiveOpts (#6689)
*Motivation*

-XX:+AggressiveOpts is deprecated in JDK11